# predicto

./: .gitignore  README.md  project_structure_  pyproject.toml  requirements.txt
football_predictor/: Bump  __init__.py
football_predictor/backtesting/: backtester.py  metrics.py  reports.py
football_predictor/betting/: __init__.py  __init___  bankroll_manager.py  bet_tracker.py  kelly_criterion.py  value_bet_finder.py
football_predictor/cli/: main.py  main_
football_predictor/config/: __init__.py  config.yaml  settings.py
football_predictor/data/processors/: match_processor.py  match_processor_  player_processor.py
football_predictor/data/scrapers/: __init__.py  base_scraper.py  sofifa_scraper.py  sofifa_scraper_
football_predictor/features/: __init__.py  feature_engineering.py  form_features.py  h2h_features.py  h2h_features_  player_features.py  referee_features.py  rest_days.py  team_features.py
football_predictor/models/: __init__.py  base_model.py  btts_model.py  ensemble.py  ensemble_  exact_score_model.py  over_under_model.py  player_stats_model.py  result_model.py
src/football_predictor/backtesting/: backtester.py
src/football_predictor/betting/: bankroll_manager.py  bet_tracker.py  kelly_criterion.py  value_bet_finder.py
src/football_predictor/cli/: main.py
src/football_predictor/config/: betting_markets.yaml  leagues.yaml
src/football_predictor/data/processors/: match_processor.py
src/football_predictor/data/scrapers/: sofifa_scraper.py
src/football_predictor/features/: __init__.py  referee_features.py  rest_days_  team_features.py
src/football_predictor/models/: result_model.py
tests/: test_kelly.py  test_models.py
