[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "1.0.0"
description = "Sistema predittivo per scommesse calcistiche con ML"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Football Predictor Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License ::  OSI Approved ::  MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language ::  Python :: 3.10",
    "Programming Language :: Python ::  3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "soccerdata>=1.8.0",
    "click>=8.1.0",
    "rich>=13.6.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[project.scripts]
football-predictor = "football_predictor.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/football-predictor"
Documentation = "https://github.com/yourusername/football-predictor#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["football_predictor*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest. ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=football_predictor --cov-report=term-missing"